# OpenGl_Examples

Car/: CMakeLists.txt
Car/import/libs/win64/lib/: SOIL.lib
Car/src/: circle.cpp  circle.h  main.cpp
Car/src/shaders/: simple.fs.glsl  simple.vs.glsl
Cube/src/: main.cpp
Cube/src/shaders/: simple.fs.glsl
CubeMaker/: CMakeLists.txt  sources.cmake
CubeMaker/figures/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
CubeMaker/src/: animation_swap.cpp  animation_swap.h  command_parser.cpp  command_parser.h  insertion_sort.h  main.cpp
CubeMaker/src/gl_common/: shader_functions.cpp  shader_functions.h
CubeMaker/src/shaders/: simple.vs.glsl  texture.vs.glsl
Point/: CMakeLists.txt
Point/src/: main.cpp
Point/src/shaders/: simple.fs.glsl  simple.vs.glsl
SlotMachine/: CMakeLists.txt
SlotMachine/import/include/: sb7.h
SlotMachine/src/: main.cpp  slot_elements.cpp  slot_elements.h
SlotMachine/src/shaders/: simple.vs.glsl  texture.fs.glsl
Tetris/: CMakeLists.txt  sources.cmake
Tetris/import/include/: sb7.h
Tetris/src/: cube_sample.h  main.cpp
Tetris/src/shaders/: simple.fs.glsl  simple.vs.glsl
Tetris/src/tetris/: figure.cpp  figure.h  opengl_wrapper.cpp  opengl_wrapper.h  tetris.cpp  tetris.h
TextCubes/: CMakeLists.txt
TextCubes/src/: cube_sample.h  main.cpp
TextCubes/src/shaders/: simple.fs.glsl  simple.vs.glsl
Textures/: CMakeLists.txt
Textures/src/: cube_sample.h  main.cpp
Textures/src/gl_common/: shader_functions.h
Textures/src/shaders/: simple.vs.glsl  texture.fs.glsl
Tunnel/: CMakeLists.txt
Tunnel/src/: cube_sample.h  main.cpp
Tunnel/src/gl_common/: shader_functions.h
Tunnel/src/shaders/: simple.fs.glsl  simple.vs.glsl
WikiCube/: CMakeLists.txt  configure.bat
WikiCube/src/: main.cpp
WikiCube/src/gl_common/: shader_reader.h
